--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,84 @@
     <artifactId>Spleef</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
+    
+    <build>
+        <defaultGoal>clean install</defaultGoal>
+        <finalName>${project.name}</finalName>
+        <sourceDirectory>${basedir}/src/main/java/</sourceDirectory>
+            
+        <resources>
+            <resource>
+                <targetPath>.</targetPath>
+                <filtering>true</filtering>
+                <directory>${basedir}/src/main/resources/</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>			
+        </resources>
+        
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <minimizeJar>false</minimizeJar>
+                            <artifactSet>
+                                <includes>
+                                    <include>de.TheJeterLP.Bukkit:Updater</include>
+                                </includes>
+                            </artifactSet>                           
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>    
+        </plugins>                                    
+    </build>
+    
+    <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository>        
+        <repository>
+            <id>R3D</id>
+            <url>http://repo.redthirddivision.com/</url>
+        </repository>
+    </repositories>
+    
+    <dependencies>      
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8-R0.1-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.redthirddivision</groupId>
+            <artifactId>BukkitGameLib</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+                
+        <dependency>
+            <groupId>de.TheJeterLP.Bukkit</groupId>
+            <artifactId>Updater</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency> 
+    </dependencies>
+    
 </project>
