--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.redthirddivision</groupId>
+    <groupId>de.jeter</groupId>
     <artifactId>Spleef</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -33,7 +33,11 @@
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>       
+        </repository>     
+        <repository>
+            <id>jeter-repo</id>
+            <url>https://nexus.jeter.de/repository/snapshots/</url>
+        </repository>    
     </repositories>
     
     <dependencies>      
@@ -42,12 +46,11 @@
             <artifactId>spigot-api</artifactId>
             <version>1.15.2-R0.1-SNAPSHOT</version>
         </dependency> 
-        
         <dependency>
-            <groupId>com.redthirddivision</groupId>
+            <groupId>de.jeter</groupId>
             <artifactId>BukkitGameLib</artifactId>
             <version>1.0.1-SNAPSHOT</version>
-        </dependency>               
+        </dependency> 
     </dependencies>
     
 </project>
